--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,12 @@ upload-chart:
   tags:
     - k8s
     - graphaware
-  variables:
-    HARBOR_USERNAME: 'robot$imagepull-secret-shared'
   script:
     - apt update && apt install -y curl git
     - curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 &&  chmod 700 get_helm.sh
     - ./get_helm.sh
     - helm plugin install https://github.com/chartmuseum/helm-push
+    - export HARBOR_USERNAME='robot$imagepull-secret-shared' 
     - echo $HARBOR_USERNAME
     - helm repo add --username $HARBOR_USERNAME --password $HARBOR_PASSWORD ga-public https://docker.graphaware.com/chartrepo/public
     - helm package .
