--- a/hume-helm/templates/api-configmap.yaml
+++ b/hume-helm/templates/api-configmap.yaml
@@ -9,9 +9,9 @@ metadata:
   {{ toYaml . | indent 4 }}
   {{- end }}
 data:
-  SPRING_DATASOURCE_URL: "jdbc:postgresql://postgresql-core:{{ .Values.postgresqlCore.global.postgresql.servicePort }}/{{ .Values.postgresqlCore.global.postgresql.postgresqlDatabase }}"
-  SPRING_DATASOURCE_USERNAME: {{ .Values.postgresqlCore.global.postgresql.postgresqlUsername }}
-  SPRING_DATASOURCE_PASSWORD: {{ .Values.postgresqlCore.global.postgresql.postgresqlPassword }}
+  SPRING_DATASOURCE_URL: "jdbc:postgresql://postgresql-core:{{ .Values.postgresqlCore.global.postgresql.auth.servicePort }}/{{ .Values.postgresqlCore.global.postgresql.auth.database }}"
+  SPRING_DATASOURCE_USERNAME: {{ .Values.postgresqlCore.global.postgresql.auth.username }}
+  SPRING_DATASOURCE_PASSWORD: {{ .Values.postgresqlCore.global.postgresql.auth.password }}
   hume.orchestra.uri: "http://{{ include "hume-helm.fullname" . }}-orchestra:{{ .Values.orchestra.port }}"
   {{- if .Values.keycloak.enabled }}
   hume.security.provider: 'keycloak'
