--- a/hume-helm/Chart.yaml
+++ b/hume-helm/Chart.yaml
@@ -4,6 +4,7 @@ home: https://www.graphaware.com
 version: "2.16.0"
 appVersion: "2.16.0-SNAPSHOT"
 type: application
+icon: https://s3.eu-west-1.amazonaws.com/graphaware.com/favicon.ico
 keywords:
   - hume
   - neo4j
@@ -15,7 +16,7 @@ dependencies:
       repository: https://charts.bitnami.com/bitnami
       alias: postgresqlCore
     - name: keycloak
-      version: 9.8.1
+      version: 10.0.0
       repository: https://charts.bitnami.com/bitnami
       alias: keycloak
       condition: keycloak.enabled
