--- a/hume-helm/templates/keycloak-ingress.yaml
+++ b/hume-helm/templates/keycloak-ingress.yaml
@@ -25,7 +25,7 @@ spec:
 {{ tpl (toYaml .Values.ingress.tls) $ | indent 4 }}
 {{- end }}
   rules:
-    - host: {{ .Values.keycloak.app.name }}{{ .Values.ingress.appNameSuffix }}.{{ .Values.baseDomain }}
+    - host: {{ .Values.keycloak.app.name }}{{ .Values.ingress.appNameSuffix }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}
       http:
         paths:
           - path: {{ .Values.ingress.path }}
