--- a/hume-helm/templates/web-configmap.yaml
+++ b/hume-helm/templates/web-configmap.yaml
@@ -9,10 +9,14 @@ metadata:
   {{ toYaml . | indent 4 }}
   {{- end }}
 data:
-  HUME_API_URL: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.api.app.name }}{{ .Values.ingress.appNameSuffix }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
+  {{ if .Values.ingress.enabled }}
+  HUME_API_URL: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.api.app.name }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
+  {{ else }}
+  HUME_API_URL: "http://localhost"
+  {{ end }}
   {{- if .Values.keycloak.enabled}}
   KEYCLOAK_ENABLED: 'true'
-  KEYCLOAK_URL: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.app.name }}{{ .Values.ingress.appNameSuffix }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}/auth"
+  KEYCLOAK_URL: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.app.name }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}/auth"
   KEYCLOAK_REALM: {{ .Values.keycloak.realm }}
   KEYCLOAK_CLIENT: {{ .Values.keycloak.client }}
   {{- end}}
