--- a/hume-helm/templates/hume-api-ingress.yaml
+++ b/hume-helm/templates/hume-api-ingress.yaml
@@ -24,7 +24,7 @@ spec:
 {{ tpl (toYaml .Values.ingress.tls) $ | indent 4 }}
 {{- end }}
   rules:
-    - host: {{ .Values.api.app.name }}{{ .Values.ingress.appNameSuffix }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}
+    - host: {{ .Values.api.app.name }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}
       http:
         paths:
           - path: {{ .Values.ingress.path }}
