--- a/hume-helm/templates/deployment.yaml
+++ b/hume-helm/templates/deployment.yaml
@@ -98,10 +98,16 @@ spec:
             httpGet:
               path: /actuator/health
               port: api
-          readinessProbe:
+            initialDelaySeconds: {{ .Values.api.probes.livenessProbe.inititalDelaySeconds }}
+            periodSeconds: {{ .Values.api.probes.livenessProbe.periodSeconds }}
+            failureThreshold: {{ .Values.api.probes.livenessProbe.failureThreshold }}
+          startupProbe:
             httpGet:
               path: /actuator/health
               port: api
+            initialDelaySeconds: {{ .Values.api.probes.startupProbe.inititalDelaySeconds }}
+            periodSeconds: {{ .Values.api.probes.startupProbe.periodSeconds }}
+            failureThreshold: {{ .Values.api.probes.startupProbe.failureThreshold }}
           envFrom:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-api-configmap
