--- a/hume-helm/templates/deployment.yaml
+++ b/hume-helm/templates/deployment.yaml
@@ -111,5 +111,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "hume-helm.fullname" . }}-api-configmap
+            - secretRef:
+                name: hume-licence
+                optional: true
           resources:
             {{- toYaml .Values.api.resources | nindent 12 }}
