--- a/hume-helm/values.yaml
+++ b/hume-helm/values.yaml
@@ -44,15 +44,18 @@ fullnameOverride: "hume"
 
 ### Application based parameters ###
 keycloak:
+  # see https://github.com/bitnami/charts/tree/master/bitnami/keycloak
+  # for subchart settings
   enabled: false
   realm: hume
   client: "hume-web"
   fullnameOverride: hume-keycloak
   service:
     type: ClusterIP
+    ports:
+      http: 8180
   app:
     name: hume-keycloak
-  proxyAddressForwarding: true
 web:
   image:
     name: "hume-web"
