--- a/hume-alerting/Chart.yaml
+++ b/hume-alerting/Chart.yaml
@@ -3,7 +3,7 @@ name: hume-alerting
 description: A Helm chart for Kubernetes
 type: application
 version: "2.16.0"
-appVersion: "2.16.0-RC"
+appVersion: "2.16.0"
 dependencies:
   - name: postgresql
     version: 11.9.1
