--- a/hume-helm/templates/web-configmap.yaml
+++ b/hume-helm/templates/web-configmap.yaml
@@ -10,14 +10,14 @@ metadata:
   {{- end }}
 data:
   {{ if .Values.ingress.enabled }}
-  HUME_API_URL: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.api.app.name }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
+  HUME_API_URL: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.api.app.name }}{{ .Values.ingress.appNameSuffix }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
   {{ else }}
   HUME_API_URL: "http://localhost:{{ .Values.api.port }}"
   {{ end }}
   {{- if .Values.keycloak.enabled}}
   KEYCLOAK_ENABLED: 'true'
   {{- if .Values.ingress.enabled }}
-  KEYCLOAK_URL: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.app.name }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
+  KEYCLOAK_URL: "{{ .Values.ingress.protocol.scheme }}://{{ .Values.keycloak.app.name }}{{ .Values.ingress.appNameSuffix }}.{{ required "Missing required baseDomain parameter!" .Values.baseDomain }}"
   {{ else }}
   KEYCLOAK_URL: "http://localhost:{{ .Values.keycloak.service.ports.http }}"
   {{ end }}
