add apoc-core by default

--- a/hume-helm/values.yaml
+++ b/hume-helm/values.yaml
@@ -99,6 +99,9 @@ neo4j:
     acceptLicenseAgreement: "yes"
     password: password
     edition: enterprise
+    config:
+      dbms.directories.plugins: "/var/lib/neo4j/labs"
+      dbms.security.procedures.unrestricted: "apoc.*"
   volumes:
     data:
       mode: "defaultStorageClass"
