--- a/hume-helm/values.yaml
+++ b/hume-helm/values.yaml
@@ -98,6 +98,7 @@ api:
       failureThreshold: 60
 neo4j:
   enabled: true
+  fullnameOverride: "neo4j"
   neo4j:
     name: neo4j
     enabled: true
