--- a/hume-helm/values.yaml
+++ b/hume-helm/values.yaml
@@ -60,6 +60,7 @@ keycloak:
 web:
   image:
     name: "hume-web"
+  appVersion: ""
   port: 8081
   service:
     type: ClusterIP
@@ -69,6 +70,7 @@ web:
 api:
   image:
     name: "hume-api"
+  appVersion: ""
   port: 8080  
   replicaCount: 1
   service:
@@ -119,6 +121,7 @@ orchestra:
   enabled: true
   image:
     name: "hume-orchestra"
+  appVersion: ""
   port: 8100
   service:
     type: ClusterIP
