--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -11,7 +11,7 @@ metadata:
   {{- end }}
 spec:
   serviceName: "orchestra"
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.orchestra.deployment.replicas | default 1 }}
   selector:
     matchLabels:
       app: {{ include "hume-helm.fullname" . }}-orchestra
