--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,9 @@ upload-chart:
     - helm repo add --username $HARBOR_USERNAME --password $HARBOR_PASSWORD ga-public https://docker.graphaware.com/chartrepo/public
     - helm package hume-alerting
     - helm cm-push hume-alerting-*.tgz ga-public
+    - rm -f hume-alerting-*.tgz
     - helm package hume-helm
-    - helm cm-push hume-helm-*.tgz ga-public
+    - ls -la
+    - helm cm-push hume-*.tgz ga-public
   only:
     - main
